layout bugs fixed

--- a/Limp/Client/UI/Shared/MainLayout.razor.css
+++ b/Limp/Client/UI/Shared/MainLayout.razor.css
@@ -6,6 +6,10 @@ html{
     display: flex;
 }
 
+.ApplicationBody{
+    width: calc(100dvw - var(--bb-sidebar-width));
+}
+
 .RSACalculatingWarning {
     position: absolute;
     height: 100dvh;
@@ -20,5 +24,9 @@ html{
 @media only screen and (max-width: 640px) {
     .ApplicationContent{
         flex-direction: column;
+    }
+    
+    .ApplicationBody{
+        width: 100dvw;
     }
 }
